--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -61,10 +63,13 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.0.0",
-    "zod": "3.25.76"
+    "zod": "3.25.76",
+    "@prisma/client": "^5.21.1",
+    "ioredis": "^5.4.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
+    "prisma": "^5.21.1",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/react": "^19",
