--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "vaul": "^1.0.0",
     "zod": "3.25.76",
     "@prisma/client": "^5.21.1",
-    "ioredis": "^5.4.1"
+    "ioredis": "^5.4.1",
+    "jose": "^5.9.6"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
