--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push"
   },
-
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -53,8 +53,11 @@
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
+    "ioredis": "^5.4.1",
+    "jose": "^5.9.6",
     "lucide-react": "^0.454.0",
     "next": "15.5.4",
+    "next-swagger-doc": "0.4.1",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-day-picker": "9.8.0",
@@ -63,22 +66,21 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
+    "swagger-ui-react": "5.29.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.0.0",
-    "zod": "3.25.76",
-    "@prisma/client": "^5.21.1",
-    "ioredis": "^5.4.1",
-    "jose": "^5.9.6"
+    "zod": "3.25.76"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
-    "prisma": "^5.21.1",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/swagger-ui-react": "5.18.0",
     "postcss": "^8.5",
+    "prisma": "^5.21.1",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
