--- a/package.json
+++ b/package.json
@@ -75,10 +75,13 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/hast": "^3.0.4",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/swagger-ui-react": "5.18.0",
+    "@types/trusted-types": "^2.0.7",
+    "@types/unist": "^3.0.3",
     "postcss": "^8.5",
     "prisma": "^5.21.1",
     "tailwindcss": "^4.1.9",
