feat: enhance login form with autocomplete and input mode for phone and password fields
feat: improve menu page loading state management and refactor data fetching

feat: implement client-only rendering for profile page with loading fallback

feat: add loading state to reservation client and improve data fetching logic

feat: enhance restaurants page with improved option mapping and rendering

fix: standardize calendar component styles and improve date selection logic

feat: add loading indicators to combobox component for better user experience

fix: improve date range picker label formatting for better readability

fix: enhance error handling in dbTry function for transient Prisma errors

fix: simplify protected pages definition in auth control

fix: improve auth guard logic for better debugging and error handling

refactor: clean up menu repository code for better readability

refactor: clean up restaurant repository code for better readability

chore: add standalone build scripts for Next.js application

--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:webpack": "next dev",
     "dev:https": "next dev --turbopack --experimental-https --experimental-https-key .cert/localhost-key.pem --experimental-https-cert .cert/localhost.pem",
     "build": "next build --turbopack",
-    "start": "next start",
-    "start:standalone": "node .next/standalone/server.js",
+    "build:standalone": "node scripts/build-standalone.cjs",
+    "copy:standalone": "node scripts/standalone-copy.cjs",
+  "start": "next start",
+  "start:standalone": "npm run copy:standalone && node .next/standalone/server.js",
+    "standalone": "npm run copy:standalone && npm run start:standalone",
     "start:https": "local-ssl-proxy --source 3443 --target 3000 --cert .cert/localhost.pem --key .cert/localhost-key.pem",
     "lint": "biome check",
     "format": "biome format --write",
