feat: update README and add Copilot instructions; enhance dependency management scripts

--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev:webpack": "next dev",
     "dev:https": "next dev --turbopack --experimental-https --experimental-https-key .cert/localhost-key.pem --experimental-https-cert .cert/localhost.pem",
     "build": "next build --turbopack",
-  "build:standalone": "node scripts/build-standalone.cjs",
-  "copy:standalone": "node scripts/standalone-copy.cjs",
+    "sync-deps": "node scripts/sync-deps.cjs",
+    "build:standalone": "node scripts/build-standalone.cjs",
+    "copy:standalone": "node scripts/standalone-copy.cjs",
     "start": "next start",
-  "start:standalone": "npm run copy:standalone && node scripts/start-standalone.cjs",
-  "standalone": "npm run build:standalone && npm run start:standalone",
+    "start:standalone": "npm run copy:standalone && node scripts/start-standalone.cjs",
+    "standalone": "npm run build:standalone && npm run start:standalone",
+    "prepare-install": "npm run sync-deps",
     "start:https": "local-ssl-proxy --source 3443 --target 3000 --cert .cert/localhost.pem --key .cert/localhost-key.pem",
     "lint": "biome check",
     "format": "biome format --write",
@@ -60,8 +62,8 @@
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
-  "ioredis": "^5.4.1",
-  "dotenv": "^16.4.5",
+    "ioredis": "^5.4.1",
+    "dotenv": "^16.4.5",
     "jose": "^5.9.6",
     "lucide-react": "^0.454.0",
     "next": "15.5.4",
