feat: refactor ProfileClient to improve type safety and readability
- Added explicit types for reservations state and improved fetch logic.
- Enhanced form accessibility by adding htmlFor attributes to labels.
- Cleaned up error handling in various components to ensure consistent error messages.

fix: update register route to improve error handling

- Changed error handling to provide more detailed error messages.
- Updated type definitions for request and response handling.

chore: reorganize imports in registration page for consistency

- Adjusted import order for better readability and consistency across files.

refactor: optimize ReservationClient component

- Removed unnecessary imports and improved state management logic.

style: clean up restaurant page imports

- Reordered imports for better organization.

fix: ensure proper error handling in verify page

- Updated error handling to provide clearer messages.

refactor: enhance AuthSessionTimer component

- Improved error handling and added conditional rendering based on debug state.

chore: update Button component for better type safety

- Removed unnecessary role attribute and improved type definitions.

fix: enhance CLSObserver for better type safety

- Updated type assertions for better clarity and safety.

refactor: improve button component for better type handling

- Adjusted props handling for better type safety and clarity.

chore: update calendar and combobox components for consistency

- Reorganized imports and improved type handling.

fix: enhance datepicker component for better type safety

- Updated imports and improved type definitions.

chore: clean up input and switch components

- Removed unnecessary imports and improved type definitions.

fix: improve error handling in dbTry utility

- Enhanced error handling for transient Prisma errors.

chore: update environment file handling for better clarity

- Changed import paths to use node: prefix for consistency.

fix: improve JWT authentication ha

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,8 +34,5 @@
   },
   "tailwindCSS.validate": true,
   "tailwindCSS.emmetCompletions": true,
-  "editor.rulers": [
-    80,
-    120
-  ]
+  "editor.rulers": [80, 120]
 }
