--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "next start",
     "start:standalone": "npm run copy:standalone && node scripts/start-standalone.cjs",
     "standalone": "npm run build:standalone && npm run start:standalone",
-    "prepare-install": "npm run sync-deps",
+    "prepare-install": "node scripts/prepare-install.cjs",
     "start:https": "local-ssl-proxy --source 3443 --target 3000 --cert .cert/localhost.pem --key .cert/localhost-key.pem",
     "lint": "biome check",
     "format": "biome format --write",
@@ -47,7 +47,7 @@
     "@radix-ui/react-slider": "1.2.2",
     "@radix-ui/react-slot": "1.1.1",
     "@radix-ui/react-switch": "1.1.2",
-    "@radix-ui/react-tabs": "1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "1.2.4",
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
@@ -59,11 +59,11 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "ioredis": "^5.4.1",
-    "dotenv": "^16.4.5",
     "jose": "^5.9.6",
     "lucide-react": "^0.454.0",
     "next": "15.5.4",
@@ -86,10 +86,10 @@
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/hast": "^3.0.4",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/swagger-ui-react": "5.18.0",
+    "@types/node": "^22.18.13",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@types/swagger-ui-react": "^5.18.0",
     "@types/trusted-types": "^2.0.7",
     "@types/unist": "^3.0.3",
     "postcss": "^8.5",
