--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "next": "15.5.4",
     "next-swagger-doc": "0.4.1",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.1.0",
