--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "date-fns": "4.1.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.24",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "ioredis": "^5.4.1",
@@ -78,7 +79,7 @@
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "swagger-ui-react": "5.29.5",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.0.0",
     "zod": "3.25.76"
@@ -96,7 +97,7 @@
     "postcss": "^8.5",
     "prisma": "^5.21.1",
     "tailwindcss": "^4.1.9",
-    "tw-animate-css": "1.3.3",
+    "tw-animate-css": "^1.3.3",
     "typescript": "^5"
   }
 }
