--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev:webpack": "next dev",
     "dev:https": "next dev --turbopack --experimental-https --experimental-https-key .cert/localhost-key.pem --experimental-https-cert .cert/localhost.pem",
     "build": "next build --turbopack",
+    "dev:test": "concurrently \"npm run dev\" \"npm run perf:wait-and-run\"",
+    "perf:wait-and-run": "wait-on http://localhost:3000 && npx autocannon -c 20 -d 30 http://localhost:3000/api/menu",
     "sync-deps": "node scripts/sync-deps.cjs",
     "build:standalone": "node scripts/build-standalone.cjs",
     "copy:standalone": "node scripts/standalone-copy.cjs",
@@ -94,10 +96,13 @@
     "@types/swagger-ui-react": "^5.18.0",
     "@types/trusted-types": "^2.0.7",
     "@types/unist": "^3.0.3",
+    "autocannon": "^8.0.0",
+    "concurrently": "^9.2.1",
     "postcss": "^8.5",
     "prisma": "^5.21.1",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "^1.3.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wait-on": "^9.0.3"
   }
 }
