feat(api): enhance caching for menu and restaurant endpoints
- Implemented cache control headers in the menu API to respect MENU_CACHE_TTL_MS for CDN caching.
- Added error handling and logging in the restaurant API to improve reliability.
- Introduced in-memory caching for menu items with a fallback to Redis.
- Enhanced restaurantRepo to support write-through caching for immediate updates in Redis.
- Created prewarm scripts for ingredients, menu items, and restaurants to populate Redis cache.
- Added Redis debugging UI in the profile section for easier cache management.
- Introduced a logger utility for consistent logging across the application.
- Added an admin endpoint to check cache status and manage Redis keys.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push",
     "seed": "node scripts/seed.cjs",
+    "prewarm:ingredients": "node scripts/prewarm-ingredients.cjs",
+    "prewarm:restaurants": "node scripts/prewarm-restaurants.cjs",
+    "prewarm:menuitems": "node scripts/prewarm-menuitems.cjs",
+    "prewarm:ingredients:http": "node scripts/prewarm-ingredients-http.cjs",
     "scan:security": "node scripts/security-scan.cjs"
   },
   "dependencies": {
