--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "ioredis": "^5.4.1",
     "jose": "^5.9.6",
     "lucide-react": "^0.454.0",
-    "next": "15.5.4",
+    "next": "^15.5.7",
     "next-swagger-doc": "0.4.1",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
@@ -87,7 +87,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
-    "swagger-ui-react": "5.29.5",
+    "swagger-ui-react": "^5.30.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.0.0",
