--- a/package.json
+++ b/package.json
@@ -5,31 +5,18 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "dev:webpack": "next dev",
-    "dev:https": "next dev --turbopack --experimental-https --experimental-https-key .cert/localhost-key.pem --experimental-https-cert .cert/localhost.pem",
     "dev:host": "next dev --turbopack --hostname 0.0.0.0",
-    "dev:host:https": "next dev --turbopack --experimental-https --experimental-https-key .cert/localhost-key.pem --experimental-https-cert .cert/localhost.pem --hostname 0.0.0.0",
     "build": "next build --turbopack",
-    "dev:test": "concurrently \"npm run dev\" \"npm run perf:wait-and-run\"",
-    "perf:wait-and-run": "wait-on http://localhost:3000 && npx autocannon -c 20 -d 30 http://localhost:3000/api/menu",
-    "sync-deps": "node scripts/sync-deps.cjs",
-    "build:standalone": "node scripts/build-standalone.cjs",
-    "copy:standalone": "node scripts/standalone-copy.cjs",
     "start": "next start",
-    "start:standalone": "npm run copy:standalone && node scripts/start-standalone.cjs",
+    "start:standalone": "node scripts/start-standalone.cjs",
     "standalone": "npm run build:standalone && npm run start:standalone",
-    "prepare-install": "node scripts/prepare-install.cjs",
-    "start:https": "local-ssl-proxy --source 3443 --target 3000 --cert .cert/localhost.pem --key .cert/localhost-key.pem",
     "lint": "biome check",
     "format": "biome format --write",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push",
     "seed": "node scripts/seed.cjs",
     "prewarm:ingredients": "node scripts/prewarm-ingredients.cjs",
-    "prewarm:restaurants": "node scripts/prewarm-restaurants.cjs",
-    "prewarm:menuitems": "node scripts/prewarm-menuitems.cjs",
-    "prewarm:ingredients:http": "node scripts/prewarm-ingredients-http.cjs",
-    "scan:security": "node scripts/security-scan.cjs",
-    "gen:openapi": "node scripts/generate-openapi.cjs"
+    "prewarm:restaurants": "node scripts/prewarm-restaurants.cjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
